Fixed wrapping in /templates/xtc5/stylesheet.css for correct display in /templates/xtc5/module/products_media.html
git-svn-id: https://xtcmodified.svn.sourceforge.net/svnroot/xtcmodified/trunk@1123 25741c12-d480-4641-b65d-acd752be3b7f

--- a/templates/xtc5/stylesheet.css
+++ b/templates/xtc5/stylesheet.css
@@ -955,7 +955,6 @@ border:#ccc 1px solid;
 }
 table.medialist tr td {
 padding:6px;
-white-space:nowrap;
 vertical-align:top;
 }
 table.medialist tr.contentrow1 td {
